# AndroidPPT-V01

./: clean.py
00-AppTest/app/: build.gradle
01-HelloWorld/app/: build.gradle
01-ProjectTemplet/app/: app-release.apk  build.gradle
02-GeoQuiz-Final/app/: build.gradle
02-ResourceDemo/app/: build.gradle
03-GeoQuiz/: gradle.properties
03-LayoutDemo/app/: build.gradle
05-GeoQuiz/app/: build.gradle
06_StartActivity/app/: build.gradle  proguard-rules.pro
08-CriminalIntent-Final/: gradle.properties
08-CriminalIntent/app/: build.gradle
08-FragmentDemo/app/: build.gradle
09-ListViewDemo/app/: build.gradle
11-CriminalIntent/app/: build.gradle
12-ViewPagerDemo/app/: build.gradle
13-DialogDemo/app/: build.gradle
14-ToolBarDemo/app/: build.gradle
15-ContactsProviderDemo/app/: build.gradle
15-CriminalIntent/app/: build.gradle
15-SQLiteDemo/app/: build.gradle
17-FileOperation/app/: build.gradle
19-CriminalIntent-Final/app/: build.gradle
19-CriminalIntent/app/: build.gradle
20-BeatBox-Final/app/: build.gradle
20-BeatBox/app/: build.gradle
21-BeatBox-Final/: build.gradle
21-BeatBox-Final/app/: build.gradle
23-BeatBox-01/app/: build.gradle
23-DrawableXML/app/: build.gradle
23-StateDrawables/app/: build.gradle
53-RuntimePermissions/: README.txt
94-AcceleroMeterGraph/app/: CMakeLists.txt  build.gradle
94-AcceleroMeterGraph/app/src/androidTest/java/com/android/accelerometergraph/: ExampleInstrumentedTest.java
94-AcceleroMeterGraph/app/src/test/java/com/android/accelerometergraph/: ExampleUnitTest.java
(+1335 files in other folders)
